# jellyfish-agent-bot

./: .env.example  .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: codex_auth.rs  codex_cli.rs  codex_runtime.rs  lib.rs  prompt.rs  runtime.rs  traits.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  memory.rs  output.rs  retrieval.rs  session_store.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  event.rs  lib.rs  memory.rs  session.rs  types.rs
crates/feishu-plugin/: Cargo.toml
crates/feishu-plugin/src/: accounts.rs  channel.rs  config.rs  dedup.rs  lib.rs  parse.rs  plugin.rs  probe.rs  send.rs  types.rs  webhook.rs  websocket.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  routing.rs  service.rs  session_key.rs
crates/schema/: Cargo.toml
crates/schema/src/: channel.rs  lib.rs  message.rs  session.rs
crates/tools/: Cargo.toml
crates/tools/src/: builtin.rs  lib.rs  registry.rs  traits.rs
docs/: README.md  architecture.md  developer-guide.md  roadmap.md  user-guide.md  vision.md
