[package]
name = "openclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
openclaw-core = { path = "../core" }
openclaw-tools = { path = "../tools" }
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
