[package]
name = "jellyfish-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jellyfish-core = { path = "../core" }
jellyfish-tools = { path = "../tools" }
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
