[package]
name = "jellyfish-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
jellyfish-core = { path = "../core" }
jellyfish-tools = { path = "../tools" }
reqwest.workspace = true
rig.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
