[package]
name = "jellyfish-feishu-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
feishu-sdk = { version = "0.1.2", features = ["websocket"] }
jellyfish-core = { path = "../core" }
jellyfish-gateway = { path = "../gateway" }
jellyfish-schema = { path = "../schema" }
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
