[package]
name = "openclaw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
glob.workspace = true
openclaw-core = { path = "../core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tokio.workspace = true
